--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --open",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --debug",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
 
