--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build --debug",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit",
-
-    "dev": "vue-cli-service build --mode=development && npm run serve"
+    "build:storybook": "vue-cli-service build:storybook -c config/storybook",
+    "dev": "vue-cli-service build --mode=development && npm run serve",
+    "serve:storybook": "vue-cli-service serve:storybook -p 6006 -c config/storybook",
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "vue": "^2.5.17",
@@ -18,6 +19,8 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "4.0.0-alpha.20",
+    "@storybook/addon-links": "4.0.0-alpha.20",
     "@types/jest": "^23.1.4",
     "@vue/cli-plugin-typescript": "^3.1.1",
     "@vue/cli-plugin-unit-jest": "^3.1.1",
@@ -27,6 +30,7 @@
     "sass-loader": "^7.0.1",
     "ts-jest": "^23.0.0",
     "typescript": "^3.0.0",
+    "vue-cli-plugin-storybook": "~0.4.8",
     "vue-template-compiler": "^2.5.17"
   }
 }
