--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@storybook/addon-actions": "4.0.0-alpha.20",
     "@storybook/addon-links": "4.0.0-alpha.20",
     "@types/jest": "^23.1.4",
+    "@types/storybook__addon-actions": "~3.4.1",
     "@types/storybook__vue": "~3.3.1",
     "@vue/cli-plugin-typescript": "^3.1.1",
     "@vue/cli-plugin-unit-jest": "^3.1.1",
