--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build --debug",
     "lint": "vue-cli-service lint",
-    "build:storybook": "vue-cli-service build:storybook -c config/storybook",
+    "build:storybook": "vue-cli-service build:storybook -c config/storybook && node ./build-scripts/fix-static-storybook.js",
     "dev": "vue-cli-service build --mode=development && npm run serve",
     "serve:storybook": "vue-cli-service serve:storybook -p 6006 -c config/storybook",
     "test:unit": "vue-cli-service test:unit"
@@ -29,8 +29,10 @@
     "@vue/cli-service": "^3.1.1",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-loader": "~8.0.4",
+    "fs-extra": "~7.0.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "sinon": "~7.1.1",
     "ts-jest": "^23.0.0",
     "typescript": "^3.0.0",
     "vue-cli-plugin-storybook": "~0.4.8",
